GNOME Bugzilla – Bug 719840
max/min-zoom-level does not get notified on set_map_source
Last modified: 2013-12-06 00:20:48 UTC
In champlain_view_set_map_source the view max/min zoom levels will be set to the map source max/min zoom levels. But there is no call to notify that the view properties have changed.
Created attachment 263508 [details] [review] view: notify max/min-zoom-level on set_map_source When setting a new map_source we change the vie max/min-zoom-level but we do not make sure they get notified. This patchs sets them using champlain_view_set_[max|min]_zoom_level to ensure this.
Applied, thanks!