view: notify max/min-zoom-level on set_map_source

When setting a new map_source we change the vie max/min-zoom-level
but we do not make sure they get notified.

This patchs sets them using champlain_view_set_[max|min]_zoom_level
to ensure this.

https://bugzilla.gnome.org/show_bug.cgi?id=719840